# middlewares/user_admin.go
@@ -1,0 +1,35 @@
+package middlewares
+
+import (
+	"gin_gorm_oj/helper"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+func AuthUserCheck() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		// TODO: Check if user is admin
+		auth := c.GetHeader("Authorization")
+		userClaim, err := helper.AnalyseToken(auth)
+		if err != nil {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code":    http.StatusUnauthorized,
+				"message": "Unauthorized",
+			})
+			return
+		}
+		if userClaim == nil {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code":    http.StatusUnauthorized,
+				"message": "Unauthorized aDMIN",
+			})
+
+			return
+		}
+
+		c.Set("user", userClaim)
+		c.Next()
+	}
+}
