# service/problem.go
@@ -2,6 +2,7 @@ package service
 
 import (
 	"encoding/json"
+	"errors"
 	"gin_gorm_oj/define"
 	"gin_gorm_oj/helper"
 	"gin_gorm_oj/models"
@@ -103,7 +104,7 @@ func GetProblemDetail(c *gin.Context) {
 // @Param category_ids formData array false "category_ids"
 // @Param test_cases formData array true "test_cases"
 // @Success 200 {string} json "{"code":"200","data":""}"
-// @Router /problem-create [post]
+// @Router /admin/problem-create [post]
 func ProblemCreate(c *gin.Context) {
 	title := c.PostForm("title")
 	content := c.PostForm("content")
@@ -170,7 +171,7 @@ func ProblemCreate(c *gin.Context) {
 		}
 		testCasesBasics = append(testCasesBasics, testCasesBasic)
 	}
-	data.TestCase = testCasesBasics
+	data.TestCases = testCasesBasics
 
 	err := models.DB.Create(data).Error
 	if err != nil {
@@ -183,5 +184,124 @@ func ProblemCreate(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"code": 200,
 		"msg":  "创建成功",
+	})
+}
+
+// ProblemModify
+// @Tags 管理员私有方法
+// @Summary 问题修改
+// @Param authorization header string true "authorization"
+// @Param identity formData string true "identity"
+// @Param title formData string true "title"
+// @Param content formData string true "content"
+// @Param max_runtime formData string false "max_runtime"
+// @Param max_memory formData string false "max_memory"
+// @Param category_ids formData []string  false "category_ids" collectionFormat(multi)
+// @Param test_cases formData []string true "test_cases" collectionFormat(multi)
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /admin/problem-modify [put]
+func ProblemModify(c *gin.Context) {
+	identity := c.PostForm("identity")
+	title := c.PostForm("title")
+	content := c.PostForm("content")
+	maxRuntime, _ := strconv.Atoi(c.PostForm("max_runtime"))
+	maxMemory, _ := strconv.Atoi(c.PostForm("max_memory"))
+	categoryIds := c.PostFormArray("category_ids")
+	testCases := c.PostFormArray("test_cases")
+	if title == "" || identity == "" || maxRuntime == 0 || maxMemory == 0 || content == "" || len(categoryIds) == 0 || len(testCases) == 0 {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "参数不能为空",
+		})
+		return
+	}
+
+	if err := models.DB.Transaction(func(tx *gorm.DB) error {
+		//问题基础信息保存
+		problemBasic := &models.ProblemBasic{
+
+			Identity: identity,
+
+			Title:      title,
+			Content:    content,
+			MaxRuntime: maxRuntime,
+			MaxMem:     maxMemory,
+		}
+		err := tx.Where("identity = ?", identity).Updates(problemBasic).Error
+		if err != nil {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "problem modify error:" + err.Error(),
+			})
+			return err
+		}
+
+		//查询问题详情
+		err = tx.Where("identity = ?", identity).Find(problemBasic).Error
+		if err != nil {
+			return err
+		}
+		//关联问题分类的更新
+		//1.删除已经存在的关联关系
+		err = tx.Where("problem_id = ?", problemBasic.ID).Delete(new(models.ProblemCategory)).Error
+		if err != nil {
+			return err
+		}
+		//2.添加新的关联关系
+		pcs := make([]*models.ProblemCategory, 0)
+		for _, id := range categoryIds {
+			intId, _ := strconv.Atoi(id)
+			pcs = append(pcs, &models.ProblemCategory{
+				ProblemId:  problemBasic.ID,
+				CategoryId: uint(intId),
+			})
+		}
+		err = tx.Create(&pcs).Error
+		if err != nil {
+			return err
+		}
+		//关联测试案例的更新
+		//1.删除已经存在的关联关系
+		err = tx.Where("problem_identity = ?", identity).Delete(new(models.TestCase)).Error
+		if err != nil {
+			return err
+		}
+		//2.添加新的关联关系
+		tcs := make([]*models.TestCase, 0)
+		for _, testCase := range testCases {
+			caseMap := make(map[string]string)
+			json.Unmarshal([]byte(testCase), &caseMap)
+			if err != nil {
+				return err
+			}
+			if _, ok := caseMap["input"]; !ok {
+				return errors.New("测试案例[input]格式错误")
+			}
+			if _, ok := caseMap["output"]; !ok {
+				return errors.New("测试案例[output]格式错误")
+			}
+			tcs = append(tcs, &models.TestCase{
+				Identity:        identity,
+				ProblemIdentity: identity,
+				Input:           caseMap["input"],
+				Output:          caseMap["output"],
+			})
+		}
+		err = tx.Create(tcs).Error
+		if err != nil {
+			return err
+		}
+		return nil
+	}); err != nil {
+
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "problem modify error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"msg":  "问题修改成功",
 	})
 }
